--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8089
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=admin12345
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
@@ -23,6 +23,7 @@ spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
 
 logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.batch=DEBUG
 
 file.input=classpath:data/
 file.input.customer=classpath:data/customers.txt
