added another config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,10 +22,12 @@ spring.jpa.properties.hibernate.order_inserts=true
 spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
 
+# Enhanced logging for troubleshooting
 logging.level.org.hibernate=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.batch=DEBUG
+logging.level.org.springframework.transaction=DEBUG
+logging.level.org.springframework.orm.jpa=DEBUG
 
 file.input=classpath:data/
-file.input.customer=classpath:data/customers.txt
-file.input.person=classpath:data/persons.txt
-file.input.order=classpath:data/orders.txt
